# programminglabpart2

./: README.md
RGZ/: CMakeLists.txt  guitar_rgz.txt  guitar_rgz_result.txt
RGZ/src/: controller.cpp  controller.h  guitar.cpp  guitar.h  list.cpp  list.h  main.cpp  menu.cpp  menu.h
lab12/doc/: Лабораторна №12.docx
lab12/getc/src/: lib.c  lib.h  main.c
lab12/gets/: CMakeLists.txt  lib.c  lib.h
lab12/printf/: CMakeLists.txt  lib.c  lib.h  main.c
lab12/write/: CMakeLists.txt  lib.c  lib.h  main.c
lab14/: Doxyfile  Makefile  README.md  file.txt  result.txt
lab14/doc/: Лабораторна №14.docx
lab14/src/: lib.c  lib.h  main.c
lab15/: CMakeLists.txt  guitar.txt
lab15/doc/: Лабораторна №15.docx
lab15/src/: lib.c  lib.h  main.c
lab15/test/: test.c
lab18/: CMakeLists.txt  lib.c  lib.h  main.c
lab19/: CMakeLists.txt  guitar_result.txt
lab19/doc/: Лабораторна №19.docx
lab19/src/: guitar.c  guitar.h  list.c  list.h  main.c
lab19/test/: test.c
lab20/: CMakeLists.txt
lab20/doc/: Лабораторна №20.docx
lab20/src/: list.c
lab21/: shared
lab21/Sharedlib/: Makefile
lab21/Sharedlib/src/: guitar.h  main.c
lab23/: CMakeLists.txt
lab23/doc/: Лабораторна №23.docx
lab23/src/: guitar.cpp  guitar.h  list.cpp  list.h  main.cpp
lab23/test/: test.cpp
lab24/: CMakeLists.txt  guitar_result.txt
lab24/doc/: Лабораторна №24.docx
lab24/src/: guitar.cpp  guitar.h  list.cpp  list.h  main.cpp
lab24/test/: test.cpp
lab25/: CMakeLists.txt  guitar.txt  guitar_result.txt
lab25/doc/: Лабораторна №25.docx
lab25/src/: guitar.cpp  guitar.h  list.cpp  list.h  main.cpp
lab25/test/: test.cpp
lab26/: CMakeLists.txt
lab26/doc/: Лабораторна №26.docx
lab26/src/: guitar.cpp  guitar.h  list.cpp  list.h  main.cpp
lab27/: CMakeLists.txt
lab27/src/: guitar.cpp  guitar.h  list.cpp  list.h  main.cpp
lab28/: CMakeLists.txt  result.txt
lab28/doc/: Лабораторна №28.docx
lab28/src/: main.cpp  menu.cpp  menu.h  tasks.cpp  tasks.h
lab29/: CMakeLists.txt
lab29/src/: list.hpp  main.cpp
lab30/: CMakeLists.txt
lab30/src/: main.cpp  task.cpp  task.h
(+4 files in other folders)
